--- a/themes/webstack/layouts/home.html
+++ b/themes/webstack/layouts/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ $.Site.Title }} | {{ $.Site.Params.Subtitle }}</title>
     <meta name="description" content="{{ $.Site.Params.Subtitle }}">
-    <link rel="shortcut icon" href="{{ $.Site.Params.cdn }}/images/favicon.png">
+    <link rel="shortcut icon" href="https://images.weserv.nl/?url={{ $.Site.Params.cdn }}/images/favicon.png">
     <link rel="stylesheet" href="{{ $.Site.Params.cdn }}/css/icomoon.css">
     <link rel="stylesheet" href="{{ $.Site.Params.cdn }}/css/style-diy.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo:400,700,400italic" media="print" onload="this.media='all'">
@@ -285,13 +285,22 @@
     </script>
     <!-- Bottom Scripts -->
 
-<script src="{{ $.Site.Params.cdn }}/js/bootstrap.min.js"></script>
+<!-- <script src="{{ $.Site.Params.cdn }}/js/bootstrap.min.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/TweenMax.min.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/resizeable.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/xenon-toggle.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/xenon-custom.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/lozad.js"></script>
+<script src="{{ $.Site.Params.cdn }}/js/LetterAvatar.js"></script> -->
+
+<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+<script src="{{ $.Site.Params.cdn }}/js/TweenMax.min.js"></script>
+<script src="{{ $.Site.Params.cdn }}/js/resizeable.js"></script>
+<script src="{{ $.Site.Params.cdn }}/js/xenon-toggle.js"></script>
+<script src="{{ $.Site.Params.cdn }}/js/xenon-custom.js"></script>
+<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/lozad.js/1.16.0/lozad.js"></script>
 <script src="{{ $.Site.Params.cdn }}/js/LetterAvatar.js"></script>
+
 
 </body>
 </html>
